--- a/blocks/top/__subtitle/top__subtitle.css
+++ b/blocks/top/__subtitle/top__subtitle.css
@@ -1,8 +1,8 @@
 .top__subtitle {
-  max-width: 583px;
+  max-width: 640px;
   font-weight: normal;
   font-size: 30px;
-  line-height: 1.2;
+  line-height: 36px;
   text-align: center;
   margin-top: 0;
   margin-bottom: 78px;
