--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,6 @@
 .header__lang-link {
-  width: 30px;
+  max-width: 30px;
+  width: 100%;
   margin-left: 18px;
   font-size: 24px;
   font-weight: 400;
